--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,6 @@ Description: This package makes it possible to perform all the stages
 Depends: R (>= 3.4.0)
 Imports:
     tidyverse,
-    stringr,
-    magrittr
+    stringr
 License: MIT
 Encoding: UTF-8
