Rename a wrapper function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(create_Dstats_pop_file)
 export(create_param_file)
 export(create_qpF4ratio_pop_file)
-export(f4_ratio)
 export(merge_pops)
+export(qpF4ratio)
 export(read_geno)
 export(read_ind)
 export(read_qpDstat)
