Add qpDstat wrapper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(create_Dstats_pop_file)
 export(create_par_file)
 export(create_qpF4ratio_pop_file)
 export(merge_pops)
+export(qpDstat)
 export(qpF4ratio)
 export(read_geno)
 export(read_ind)
