--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(create_par_file)
 export(create_qpDstat_pop_file)
 export(create_qpF4ratio_pop_file)
+export(gt_to_eigenstrat)
 export(merge_pops)
 export(qpDstat)
 export(qpF4ratio)
