Add function for subsetting EIGENSTRAT data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(read_snp)
 export(run_cmd)
 export(snps_missing)
 export(snps_present)
+export(subset_sites)
 import(dplyr)
 import(readr)
 import(stringr)
