--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(create_par_file)
 export(create_qpDstat_pop_file)
 export(create_qpF4ratio_pop_file)
-export(gt_to_eigenstrat)
 export(merge_pops)
 export(qpDstat)
 export(qpF4ratio)
@@ -16,6 +15,7 @@ export(run_cmd)
 export(snps_missing)
 export(snps_present)
 export(subset_sites)
+export(to_vcf)
 import(dplyr)
 import(readr)
 import(stringr)
