--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(create_par_file)
 export(create_qpDstat_pop_file)
 export(create_qpF4ratio_pop_file)
+export(eigenstrat_to_vcf)
 export(merge_pops)
 export(qpDstat)
 export(qpF4ratio)
@@ -15,7 +16,6 @@ export(run_cmd)
 export(snps_missing)
 export(snps_present)
 export(subset_sites)
-export(to_vcf)
 import(dplyr)
 import(readr)
 import(stringr)
