--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(run_cmd)
 export(snps_missing)
 export(snps_present)
 export(subset_sites)
+export(vcf_to_eigenstrat)
 import(dplyr)
 import(readr)
 import(stringr)
