Add EIGENSTRAT writing functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,9 @@ export(snps_missing)
 export(snps_present)
 export(subset_sites)
 export(vcf_to_eigenstrat)
+export(write_geno)
+export(write_ind)
+export(write_snp)
 import(dplyr)
 import(readr)
 import(stringr)
