--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(eigenstrat_to_vcf)
 export(merge_pops)
 export(qpDstat)
 export(qpF4ratio)
+export(read_eigenstrat)
 export(read_geno)
 export(read_ind)
 export(read_qpDstat)
@@ -17,6 +18,7 @@ export(snps_missing)
 export(snps_present)
 export(subset_sites)
 export(vcf_to_eigenstrat)
+export(write_eigenstrat)
 export(write_geno)
 export(write_ind)
 export(write_snp)
