--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports:
     stringr,
     tibble,
     dplyr,
-    readr
+    readr,
+    magrittr
 License: MIT + file LICENSE
 Encoding: UTF-8
 RoxygenNote: 6.0.1
