--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,3 +31,5 @@ Imports:
 License: MIT + file LICENSE
 Encoding: UTF-8
 RoxygenNote: 6.0.1
+URL: https://github.com/bodkan/admixr
+BugReports: https://github.com/bodkan/admixr/issues
