--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
+language: R perl
+perl:
+  - "5.26"
 sudo: false
 cache: packages
 before_install:
