--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ after_script:
   - tar xf v5.0.tar.gz
   - cd AdmixTools-5.0
   - cd src/; make clobber; make all; make install; cd ../
-#  - wget https://reich.hms.harvard.edu/sites/reich.hms.harvard.edu/files/inline-files/AdmixTools_Example_Data.tar_.gz
-#  - tar xf AdmixTools_Example_Data.tar_.gz
+  - wget https://reich.hms.harvard.edu/sites/reich.hms.harvard.edu/files/inline-files/AdmixTools_Example_Data.tar_.gz
+  - tar xf AdmixTools_Example_Data.tar_.gz
   - export PATH=$PATH:$PWD/bin
