Change location of ADMIXTOOLS & data

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ language: R
 sudo: false
 cache: packages
 after_script:
+  - cd $HOME
   - wget https://github.com/DReichLab/AdmixTools/archive/v5.0.tar.gz
   - tar xf v5.0.tar.gz
-  - cd AdmixTools-5.0
-  - cd src/; make clobber; make all; make install; cd ../
+  - cd AdmixTools-5.0; cd src/; make clobber; make all; make install; cd ../
   - wget https://reich.hms.harvard.edu/sites/reich.hms.harvard.edu/files/inline-files/AdmixTools_Example_Data.tar_.gz
   - tar xf AdmixTools_Example_Data.tar_.gz
   - export PATH=$PATH:$PWD/bin
