--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ cache:
     $HOME/AdmixTools-5.0
 after_script:
   - cd $HOME
-  - wget https://github.com/DReichLab/AdmixTools/archive/v5.0.tar.gz
+  - wget https://www.dropbox.com/s/0nsxdwaooyd5jtz/v5.0.tar.gz
   - tar xf v5.0.tar.gz
   - cd AdmixTools-5.0; cd src/; make clobber; make all; make install; cd ../
-  - wget https://reich.hms.harvard.edu/sites/reich.hms.harvard.edu/files/inline-files/AdmixTools_Example_Data.tar_.gz
+  - wget https://www.dropbox.com/s/2m53dharng61ou9/AdmixTools_Example_Data.tar_.gz
   - tar xf AdmixTools_Example_Data.tar_.gz
   - export PATH=$PATH:$PWD/bin
