--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 language: R
 sudo: false
 cache: packages
-before_install:
+install:
   - wget https://www.dropbox.com/s/0nsxdwaooyd5jtz/v5.0.tar.gz
   - tar xf v5.0.tar.gz
   - cd AdmixTools-5.0; cd src/; make clobber; make all; make install; cd ../
