--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(qpF4ratio)
 export(read_eigenstrat)
 export(read_geno)
 export(read_ind)
+export(read_output)
 export(read_qp3Pop)
 export(read_qpDstat)
 export(read_qpF4ratio)
