--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(d)
 export(eigenstrat_to_vcf)
 export(f3)
 export(f4_ratio)
-export(merge_pops)
+export(merge_labels)
 export(read_eigenstrat)
 export(read_geno)
 export(read_ind)
