Add draft of the qpAdm functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,13 @@ export(eigenstrat_to_vcf)
 export(f3)
 export(f4_ratio)
 export(merge_labels)
+export(qpAdm)
 export(read_eigenstrat)
 export(read_geno)
 export(read_ind)
 export(read_output)
 export(read_qp3Pop)
+export(read_qpAdm)
 export(read_qpDstat)
 export(read_qpF4ratio)
 export(read_snp)
