--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@
 language: R
 sudo: false
 cache: packages
+after_success:
+  - Rscript -e 'covr::codecov()'
 #install:
 #  - wget https://www.dropbox.com/s/0nsxdwaooyd5jtz/v5.0.tar.gz
 #  - tar xf v5.0.tar.gz
