--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,4 +15,6 @@ Encoding: UTF-8
 RoxygenNote: 6.1.0
 URL: https://github.com/bodkan/admixr
 BugReports: https://github.com/bodkan/admixr/issues
-Suggests: testthat
+Suggests: 
+    testthat,
+    covr
