--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@
 language: R
 sudo: false
 cache: packages
-after_success:
+before_install:
   - wget https://github.com/DReichLab/AdmixTools/archive/v5.0.tar.gz
   - tar xf v5.0.tar.gz
   - cd AdmixTools-5.0; cd src/; make clobber; make all; make install; cd ../
   - wget https://www.dropbox.com/s/2m53dharng61ou9/AdmixTools_Example_Data.tar_.gz
   - tar xf AdmixTools_Example_Data.tar_.gz
   - export PATH=$PATH:$PWD/bin
+after_success:
   - Rscript -e 'covr::codecov()'
