--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-
 language: R
 sudo: false
 cache: packages
 before_install:
+  - sudo apt-get update
+  - sudo apt-get install libopenblas-dev libgsl0ldbl
   - wget https://github.com/DReichLab/AdmixTools/archive/v5.0.tar.gz
   - tar xf v5.0.tar.gz
   - cd AdmixTools-5.0; cd src/; make clobber; make all; make install; cd ../
