Install R pkg deps (not sure why)

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ install:
   - tar xf AdmixTools_Example_Data.tar_.gz
   - export PATH=$PATH:$PWD/bin
   - popd
+  - R -e 'install.packages("stringr", "tibble", "dplyr", "readr", "magrittr", "testthat", "covr")'
 after_success:
   - Rscript -e 'covr::codecov()'
