--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
 before_install:
   - sudo apt-get update
   - sudo apt-get install libopenblas-dev libgsl-dev liblapack-dev
-  - mkdir /tmp/deps
+  - mkdir -p /tmp/deps
   - pushd /tmp/deps
   - wget https://github.com/DReichLab/AdmixTools/archive/v5.0.tar.gz
   - tar xf v5.0.tar.gz
