--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 language: R
 sudo: false
 cache:
+  directories: /tmp/deps
   packages: true
 before_install:
   - sudo apt-get update
   - sudo apt-get install libopenblas-dev libgsl-dev liblapack-dev
-  - rm -rf /tmp/deps
-  - mkdir /tmp/deps
   - pushd /tmp/deps
-  - curl -O https://github.com/DReichLab/AdmixTools/archive/v5.0.tar.gz
+  - curl -LO https://github.com/DReichLab/AdmixTools/archive/v5.0.tar.gz
   - tar xf v5.0.tar.gz
   - cd AdmixTools-5.0
   - cd src; make clobber; make LDLIBS="-llapack" all; make install; cd ../
-  - curl -O https://www.dropbox.com/s/2m53dharng61ou9/AdmixTools_Example_Data.tar_.gz
+  - curl -LO https://www.dropbox.com/s/2m53dharng61ou9/AdmixTools_Example_Data.tar_.gz
   - tar xf AdmixTools_Example_Data.tar_.gz
   - export PATH=$PATH:$PWD/bin
   - popd
