--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,9 @@ Imports:
     tibble
 Suggests:
     covr,
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 Encoding: UTF-8
 RoxygenNote: 6.1.0
+VignetteBuilder: knitr
