--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - tar xf AdmixTools_Example_Data.tar_.gz
   - export PATH=$PATH:$PWD/bin
   - popd
-  - Rscript -e 'cat("\n\n\n\n\n\n", .libPaths(), "\n\n\n\n\n\n")'
+  - Rscript -e 'cat("\n\n\n\n\n\n#####", .libPaths(), "\n\n\n\n\n\n")'
 install:
   - Rscript -e 'install.packages(c("tidyverse", "MASS", "mgcv"), repos = "http://cran.rstudio.com")'
 after_success:
