Add deps to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Suggests:
     covr,
     testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    tidyverse
 Encoding: UTF-8
 RoxygenNote: 6.1.0
 VignetteBuilder: knitr
