--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: admixr
 Title: Perform ADMIXTOOLS analyses directly from R
 Version: 0.3.0
-Authors@R: person("Martin", "Petr", email = "mp@bodkan.net", role = c("aut", "cre"))
+Authors@R: person("Martin", "Petr", email = "mp@bodkan.net", role = c("aut", "cre"),
+    comment = c(ORCID = "0000-0003-4879-8421"))
 Description: Perform all ADMIXTOOLS analyses directly from R.
 License: MIT + file LICENSE
 URL: https://github.com/bodkan/admixr
