Add merge_eigenstrat function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(eigenstrat_to_vcf)
 export(f3)
 export(f4)
 export(f4ratio)
+export(merge_eigenstrat)
 export(merge_labels)
 export(qpAdm)
 export(read_eigenstrat)
