Rewrite the filtering function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(eigenstrat_to_vcf)
 export(f3)
 export(f4)
 export(f4ratio)
+export(filter_sites)
 export(merge_eigenstrat)
 export(merge_labels)
 export(qpAdm)
@@ -16,7 +17,6 @@ export(read_output)
 export(read_snp)
 export(snps_missing)
 export(snps_present)
-export(subset_sites)
 export(vcf_to_eigenstrat)
 export(write_eigenstrat)
 export(write_geno)
