--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,9 +11,8 @@ reference:
     contents:
     - merge_labels
     - merge_eigenstrat
-    - snps_missing
-    - snps_present
-    - subset_sites
+    - count_snps
+    - filter_sites
 
   - title: Reading EIGENSTRAT data
     contents:
@@ -29,7 +28,8 @@ reference:
     - eigenstrat_to_vcf
 
   - title: Parsing ADMIXTOOLS log files
-    desc: Useful only for processing old log files generated on the command-line
-      without `admixr`.
+    desc: Useful only for processing old log files generated on the
+        command-line without `admixr`. For everything else, please use
+        the built-in wrapper functions in this package.
     contents:
     - read_output
