Remove built-in dataset, add download_data() instead

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,14 @@
 export("%>%")
 export(count_snps)
 export(d)
+export(download_data)
 export(eigenstrat_to_vcf)
 export(f3)
 export(f4)
 export(f4ratio)
 export(filter_sites)
+export(group_labels)
 export(merge_eigenstrat)
-export(merge_labels)
 export(qpAdm)
 export(read_eigenstrat)
 export(read_geno)
