--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,15 @@
 Package: admixr
-Title: Perform ADMIXTOOLS analyses directly from R
+Title: An Interface for Running ADMIXTOOLS Analyses Directly from R
 Version: 0.4.1
 Authors@R: person("Martin", "Petr", email = "mp@bodkan.net", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0003-4879-8421"))
-Description: Perform all ADMIXTOOLS analyses directly from R.
+Description: A convenient interface for performing all stages of ADMIXTOOLS
+    analyses entirely from R. Wrapper functions completely automate the generation
+    of intermediate configuration files, run ADMIXTOOLS programs on the
+    command-line, and parse output files to extract values of interest. This allows
+    users to focus on the analysis itself, instead of worrying about low-level
+    technical details. A set of complementary functions for processing and filtering
+    of data in the EIGENSTRAT format is also provided.
 License: MIT + file LICENSE
 URL: https://github.com/bodkan/admixr
 BugReports: https://github.com/bodkan/admixr/issues
