Separate filtering functions and update the docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(eigenstrat_to_vcf)
 export(f3)
 export(f4)
 export(f4ratio)
+export(filter_damage)
 export(filter_sites)
 export(group_labels)
 export(merge_eigenstrat)
