Add implementation of qpWave

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(f4ratio)
 export(filter_bed)
 export(merge_eigenstrat)
 export(qpAdm)
+export(qpWave)
 export(read_geno)
 export(read_ind)
 export(read_snp)
