Add some RCpp plumbing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(count_snps)
 export(d)
 export(download_data)
 export(eigenstrat)
-export(eigenstrat_to_vcf)
 export(f3)
 export(f4)
 export(f4ratio)
@@ -23,5 +22,9 @@ export(vcf_to_eigenstrat)
 export(write_geno)
 export(write_ind)
 export(write_snp)
+export(xeigenstrat_to_vcf)
+export(xvcf_to_eigenstrat)
 import(rlang)
+importFrom(Rcpp,sourceCpp)
 importFrom(magrittr,"%>%")
+useDynLib(admixr, .registration = TRUE)
