Finally plug the C++ function into the package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,4 @@ Suggests:
 Encoding: UTF-8
 RoxygenNote: 6.1.0
 VignetteBuilder: knitr
-LinkingTo:
-    Rcpp
-SystemRequirements: C++11
+LinkingTo: Rcpp, BH
