--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - g++-7
+    - clang-6.0
     - libboost-iostreams-dev
 before_install:
   - sudo apt-get update
@@ -32,6 +32,6 @@ before_install:
     # return to the top directory
   - popd
   - mkdir ~/.R/
-  - echo "CXX=g++-7 -Wno-deprecated-declarations" > ~/.R/Makevars
+  - echo "CXX=clang-6.0" > ~/.R/Makevars
 after_success:
   - Rscript -e 'covr::codecov()'
