--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
     packages:
     - clang-3.8
     - libboost-iostreams-dev
+    - libc++-dev
 before_install:
   - sudo apt-get update
   - sudo apt-get install libopenblas-dev libgsl-dev liblapack-dev
@@ -32,6 +33,6 @@ before_install:
     # return to the top directory
   - popd
   - mkdir ~/.R/
-  - echo "CXX=clang-3.8 -std=c++14" > ~/.R/Makevars
+  - echo "CXX=clang-3.8 -std=c++14 -stdlib=libc++" > ~/.R/Makevars
 after_success:
   - Rscript -e 'covr::codecov()'
