--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,6 @@ before_install:
     # return to the top directory
   - popd
   - mkdir ~/.R/
-  - echo "CXX=clang-3.8 -std=c++14 -stdlib=libc++" > ~/.R/Makevars
+  - echo "CXX=clang-3.8 -std=c++14 -stdlib=libc++ -lstdc++" > ~/.R/Makevars
 after_success:
   - Rscript -e 'covr::codecov()'
