--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - clang-3.8
+    # g++-6 compiler was finding warnings in Boos which were interpreted
+    # as errors by the R check process - switching to Clang toolchain fixes this
+    - clang-3.8 
     - libboost-iostreams-dev
     - libc++-dev
 before_install:
@@ -32,6 +34,7 @@ before_install:
   - export PATH=$PATH:$PWD/bedtools2/bin/
     # return to the top directory
   - popd
+    # set compiler options
   - mkdir ~/.R/
   - echo "CXX=clang-3.8 -std=c++14 -stdlib=libc++ -lstdc++" > ~/.R/Makevars
 after_success:
