--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,15 +25,13 @@ Imports:
     tidyr,
     stats,
     rlang,
-    utils,
-    Rcpp
+    utils
 Suggests:
     covr,
     testthat,
     knitr,
     rmarkdown,
-    tidyverse,
+    tidyverse
 Encoding: UTF-8
 RoxygenNote: 6.1.0
 VignetteBuilder: knitr
-LinkingTo: Rcpp, BH
