Make read_output public

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(qpAdm)
 export(qpWave)
 export(read_geno)
 export(read_ind)
+export(read_output)
 export(read_snp)
 export(relabel)
 export(remove_transitions)
