Add transversions_only() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(read_snp)
 export(relabel)
 export(remove_transitions)
 export(reset)
+export(transversions_only)
 export(write_geno)
 export(write_ind)
 export(write_snp)
