Add deprecation warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(f3)
 export(f4)
 export(f4ratio)
 export(filter_bed)
+export(keep_transitions)
 export(merge_eigenstrat)
 export(qpAdm)
 export(qpWave)
