--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(f4ratio)
 export(filter_bed)
 export(keep_transitions)
 export(merge_eigenstrat)
+export(printlog)
 export(qpAdm)
 export(qpWave)
 export(read_geno)
