--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,8 @@ export(f4)
 export(f4ratio)
 export(filter_bed)
 export(keep_transitions)
+export(loginfo)
 export(merge_eigenstrat)
-export(printlog)
 export(qpAdm)
 export(qpWave)
 export(read_geno)
