--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
-pandoc: 2.7.3
-pkgdown: 1.4.0
+pandoc: 2.9.2.1
+pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   tutorial: tutorial.html
+last_built: 2020-06-13T18:26Z
 
