--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,12 @@
 Package: admixr
 Title: An Interface for Running ADMIXTOOLS Analyses Directly from R
 Version: 0.8.1
-Authors@R: person("Martin", "Petr", email = "mp@bodkan.net", role = c("aut", "cre"),
-    comment = c(ORCID = "0000-0003-4879-8421"))
+Authors@R: 
+    person(given = "Martin",
+           family = "Petr",
+           role = c("aut", "cre"),
+           email = "git@bodkan.net",
+           comment = c(ORCID = "0000-0003-4879-8421"))
 Description: A convenient interface for performing all stages of ADMIXTOOLS
     analyses entirely from R. Wrapper functions (D, f4, f3, etc.) completely
     automate the generation of intermediate configuration files, run ADMIXTOOLS
@@ -15,7 +19,7 @@ License: MIT + file LICENSE
 URL: https://github.com/bodkan/admixr
 BugReports: https://github.com/bodkan/admixr/issues
 Depends:
-    R (>= 3.4.0)
+    R (>= 3.6.0)
 Imports:
     dplyr,
     magrittr,
