--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person(given = "Martin",
            family = "Petr",
            role = c("aut", "cre"),
-           email = "git@bodkan.net",
+           email = "contact@bodkan.net",
            comment = c(ORCID = "0000-0003-4879-8421"))
 Description: A convenient interface for performing all stages of ADMIXTOOLS
     analyses entirely from R. Wrapper functions (D, f4, f3, etc.) completely
