--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,13 +8,13 @@ Authors@R:
            email = "contact@bodkan.net",
            comment = c(ORCID = "0000-0003-4879-8421"))
 Description: A convenient interface for performing all stages of 'ADMIXTOOLS'
-    analyses (https://reich.hms.harvard.edu/software) entirely from R. Wrapper
+    analyses (<https://reich.hms.harvard.edu/software>) entirely from R. Wrapper
     functions (D, f4, f3, etc.) completely automate the generation of intermediate
     configuration files, run 'ADMIXTOOLS' programs on the command-line, and
     parse output files to extract values of interest. This allows users to focus
     on the analysis itself instead of worrying about low-level technical details.
     A set of complementary functions for processing and filtering of data in
-    the EIGENSTRAT format is also provided.
+    the 'EIGENSTRAT' format is also provided.
 License: MIT + file LICENSE
 URL: https://github.com/bodkan/admixr
 BugReports: https://github.com/bodkan/admixr/issues
