--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(keep_transitions)
 export(loginfo)
 export(merge_eigenstrat)
 export(qpAdm)
+export(qpAdm_prescreen)
+export(qpAdm_rotation)
 export(qpWave)
 export(read_geno)
 export(read_ind)
