--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,6 +2,7 @@ pandoc: 2.9.2.1
 pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
+  qpAdm: qpAdm.html
   tutorial: tutorial.html
-last_built: 2020-06-16T09:39Z
+last_built: 2020-06-19T19:03Z
 
