--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -18,6 +18,9 @@ jobs:
       fail-fast: false
       matrix:
         config:
+          # vignette rendering is switched off though because of:
+          #  - https://github.com/tidyverse/ggplot2/issues/2252#issuecomment-1006713187
+          #  - https://github.com/lcolladotor/biocthis/issues/27
           - {os: macOS-latest,   r: 'release'}
           - {os: windows-latest, r: 'release'}
           - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
@@ -30,6 +33,72 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Install ADMIXTOOLS dependencies (Linux)
+        if: runner.os == 'Linux'
+        run: sudo apt-get install perl libopenblas-dev libgsl-dev liblapack-dev
+
+      - name: Install ADMIXTOOLS dependencies (macOS)
+        if: runner.os == 'macOS'
+        run: brew install openblas gsl lapack
+
+      - name: Compile and install ADMIXTOOLS (Linux + macOS)
+        if: runner.os != 'Windows'
+        run: |
+          # create a single directory for all external software
+          mkdir -p ~/deps
+          cd ~/deps
+
+          # download and unpack the ADMIXTOOLS source code
+          curl -LO https://github.com/DReichLab/AdmixTools/archive/v7.0.2.tar.gz
+          tar xf v7.0.2.tar.gz
+          cd AdmixTools-7.0.2
+
+          # set compiler flags (compilation on macOS was failing unable to find
+          # openblas library files)
+          export LDFLAGS="-L/usr/local/opt/openblas/lib"
+          export CPPFLAGS="-I/usr/local/opt/openblas/include"
+
+          # compile ADMIXTOOLS and move binaries under bin/
+          cd src
+          make clobber
+          make LDLIBS="-llapack" all
+          make install
+
+          # download testing data for unit tests
+          cd ../
+          curl -LO https://reich.hms.harvard.edu/sites/reich.hms.harvard.edu/files/inline-files/AdmixTools_Example_Data.tar_.gz
+          tar xf AdmixTools_Example_Data.tar_.gz
+
+          # run the Perl script with tests for the compiled binaries
+          cd examples
+          # fix unportable Perl shebang
+          if [[ "$OSTYPE" == "darwin"* ]]; then
+            sed -i '' "1s/.*/\#\!\/usr\/bin\/env perl -w/" mklog
+          else
+            sed -i "1s/.*/\#\!\/usr\/bin\/env perl/" mklog
+          fi
+          ./mklog
+          cd ../
+
+          # we need to do this in bash because of $OSTYPE above
+        shell: bash
+
+      - name: Compile and install bedtools
+        if: runner.os != 'Windows'
+        run: |
+          mkdir -p ~/deps
+          cd ~/deps
+          curl -LO https://github.com/arq5x/bedtools2/releases/download/v2.30.0/bedtools-2.30.0.tar.gz
+          tar xf bedtools-2.30.0.tar.gz
+          cd bedtools2
+          make
+
+      - name: Populate PATH with compiled binaries
+        if: runner.os != 'Windows'
+        run: |
+          export PATH="~/deps/AdmixTools-7.0.2/bin:~/deps/bedtools2/bin:$PATH"
+          echo "PATH=$PATH" > ~/.Renviron
 
       - uses: r-lib/actions/setup-pandoc@v1
 
