--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,7 +30,7 @@ jobs:
           - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,   r: 'release'}
           - {os: ubuntu-latest,   r: 'oldrel-1'}
-        admixtools: [ 7.0.2, 6.0, 5.1 ]
+        admixtools: ["7.0.2", "6.0", "5.1"]
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
