--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,8 @@
-pandoc: 2.16.2
+pandoc: '2.18'
 pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
   qpAdm: qpAdm.html
   tutorial: tutorial.html
-last_built: 2022-02-20T19:24Z
+last_built: 2022-08-01T12:24Z
 
