Somehow mergeit is not even compiled in ADMIXTOOLS 5.x/6.x

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -69,7 +69,9 @@ jobs:
           make clobber
           make LDLIBS="-llapack" all
           make install
-          # mergeit isn't copied by make install in 6.x and 5.x
+          # for some reason, mergeit isn't built in 6.x and 5.x?
+          # compile it and copy it
+          make mergeit
           cp mergeit ../bin
 
           # download testing data for unit tests
