--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,9 +35,8 @@ Suggests:
     testthat,
     tidyr,
     knitr,
-    rmarkdown,
-    tidyverse
+    rmarkdown
 SystemRequirements: ADMIXTOOLS suite of command-line utilities for population genetics. See <https://reich.hms.harvard.edu/software> for the most recent installation instructions and further information.
 Encoding: UTF-8
-RoxygenNote: 7.2.0
+RoxygenNote: 7.3.1
 VignetteBuilder: knitr
