--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -38,3 +38,9 @@ reference:
     - starts_with("read_(geno|ind|snp)")
     - starts_with("write_(geno|ind|snp)")
     - read_output
+
+  - title: Utility functions
+    contents:
+    - download_data
+    - print.EIGENSTRAT
+    - print.admixr_result
