--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -27,9 +27,9 @@ jobs:
           #  - https://github.com/lcolladotor/biocthis/issues/27
           - {os: macOS-latest,   r: 'release'}
           - {os: windows-latest, r: 'release'}
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'oldrel-1'}
+          - {os: ubuntu-latest,  r: 'devel'}
+          - {os: ubuntu-latest,  r: 'release'}
+          - {os: ubuntu-latest,  r: 'oldrel-1'}
         admixtools: ["7.0.2"] #, "6.0", "5.1"]
 
     env:
@@ -37,7 +37,7 @@ jobs:
       R_KEEP_PKG_SOURCE: yes
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Install ADMIXTOOLS/admixr dependencies (Linux)
         if: runner.os == 'Linux'
@@ -48,7 +48,8 @@ jobs:
         run: brew install openblas gsl lapack bedtools
 
       - name: Compile and install ADMIXTOOLS (Linux + macOS)
-        if: runner.os != 'Windows'
+        # if: runner.os != 'Windows'
+        if: runner.os == 'Linux'
         run: |
           # create a single directory for all external software
           mkdir -p ~/deps
