--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -63,11 +63,13 @@ jobs:
           # openblas library files)
           export LDFLAGS="-L/usr/local/opt/openblas/lib"
           export CPPFLAGS="-I/usr/local/opt/openblas/include"
+          export LDLIBS="-llapack -lgsl -lopenblas -lm -lnick" 
+          export CFLAGS="-c -g -p -pg -Wimplicit -I./ -I./nicksrc -Wno-implicit-function-declaration" 
 
           # compile ADMIXTOOLS and move binaries under bin/
           cd src
           make clobber
-          make LDLIBS="-llapack" CFLAGS="-c -g -p -pg -Wimplicit -I./ -I./nicksrc -Wno-implicit-function-declaration" all
+          make all
           make install
 
           # download testing data for unit tests
