--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "contact@bodkan.net",
            comment = c(ORCID = "0000-0003-4879-8421"))
 Description: An interface for performing all stages of 'ADMIXTOOLS' analyses
-    (<https://reich.hms.harvard.edu/software>) entirely from R. Wrapper functions
+    (<https://github.com/dreichlab/admixtools>) entirely from R. Wrapper functions
     (D, f4, f3, etc.) completely automate the generation of intermediate
     configuration files, run 'ADMIXTOOLS' programs on the command-line, and
     parse output files to extract values of interest. This allows users to focus
@@ -37,7 +37,7 @@ Suggests:
     tidyr,
     knitr,
     rmarkdown
-SystemRequirements: ADMIXTOOLS suite of command-line utilities for population genetics. See <https://reich.hms.harvard.edu/software> for the most recent installation instructions and further information.
+SystemRequirements: ADMIXTOOLS suite of command-line utilities for population genetics. See <https://github.com/dreichlab/admixtools> for the most recent installation instructions and further information.
 Encoding: UTF-8
 RoxygenNote: 7.3.3
 VignetteBuilder: knitr
