--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -25,7 +25,8 @@ jobs:
           # vignette rendering is switched off though because of:
           #  - https://github.com/tidyverse/ggplot2/issues/2252#issuecomment-1006713187
           #  - https://github.com/lcolladotor/biocthis/issues/27
-          - {os: macOS-latest,   r: 'release'}
+          #  excluded macOS temporarily due to ADMIXTOOLS -p related compilation errors
+          #- {os: macOS-latest,   r: 'release'}
           - {os: windows-latest, r: 'release'}
           - {os: ubuntu-latest,  r: 'devel'}
           - {os: ubuntu-latest,  r: 'release'}
