--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -45,26 +45,6 @@ jobs:
           make clobber
           make LDLIBS="-llapack" all
           make install
-          # for some reason, mergeit isn't built in 6.x and 5.x?
-          # compile it and copy it
-          make mergeit
-          cp mergeit ../bin
-
-          # download testing data for unit tests
-          cd ../
-          curl -LO https://reich.hms.harvard.edu/sites/reich.hms.harvard.edu/files/inline-files/AdmixTools_Example_Data.tar_.gz
-          tar xf AdmixTools_Example_Data.tar_.gz
-
-          # run the Perl script with tests for the compiled binaries
-          cd examples
-          # fix unportable Perl shebang
-          if [[ "$OSTYPE" == "darwin"* ]]; then
-            sed -i '' "1s/.*/\#\!\/usr\/bin\/env perl -w/" mklog
-          else
-            sed -i "1s/.*/\#\!\/usr\/bin\/env perl/" mklog
-          fi
-          ./mklog
-          cd ../
 
           # we need to do this in bash because of $OSTYPE above
         shell: bash
@@ -73,6 +53,10 @@ jobs:
         run: |
           export PATH="$HOME/deps/AdmixTools-8.0.2/bin:$PATH"
           echo "PATH=$PATH" > ~/.Renviron
+
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
